[workspace]
members = [
    "hpke-rs",
    "hpke-rs/evercrypt_provider",
    "hpke-rs/rust_crypto_provider",
    "hpke-rs/traits",
    "openmls/evercrypt_backend",
    "openmls/openmls",
    "openmls/delivery-service/ds-lib",
    "openmls/delivery-service/ds",
    "openmls/memory_keystore",
    "openmls/openmls_rust_crypto",
    "openmls/rust_crypto",
    "openmls/traits",
    "openmls/cli",
]
exclude = [
    "openmls",
    "evercrypt-rust",
]

# [patch.'https://github.com/franziskuskiefer/hpke-rs']
# hpke-rs = { path = "hpke-rs" }
# hpke-rs-crypto = { path = "hpke-rs/traits" }
# hpke-rs-rust-crypto = { path = "hpke-rs/rust_crypto_provider" }
# hpke-rs-evercrypt = { path = "hpke-rs/evercrypt_provider" }

# [patch.crates-io]
# hpke-rs = { path = "hpke-rs" }
# hpke-rs-crypto = { path = "hpke-rs/traits" }
# hpke-rs-rust-crypto = { path = "hpke-rs/rust_crypto_provider" }
# hpke-rs-evercrypt = { path = "hpke-rs/evercrypt_provider" }
